# rote

./: .env.example  .gitignore  LICENSE  README.md  requirements-voice.txt  requirements.txt
app/: browser_backend.py  browser_self_improve.py  calibrate.py  calibration.html  checker.py  config.py  cu_runner.py  desktop_cu.py  desktop_eval.py  desktop_hud.py  desktop_skill_compiler.py  desktop_speed.py  digitalocean_demo.py  eval_harness.py  executor.py  hud.py  hybrid_demo.py  local_skill_registry.py  macro_compiler.py  macro_skill.py  mcp_server.py  mcp_service.py  notch.py  notch_client.py  notch_daemon.py  notch_demo.py  real_web_skill_lab.py  replay_engine.py  runner.py  schemas.py  self_improve.py  selfheal_proof.py  skill_compiler.py  skill_inject_check.py  skill_repair.py  skill_search_index.py  skill_store.py  tasks.py  trace.py  universal_skill_compiler.py  (+3 more)
chat/: __main__.py  agent.py  main.py  tools.py
database/: api.py  index.json  test_embedding.py
docs/: LEARN_CU_ARTIFACT_CONTRACT.md  PLAN.md  SELF_IMPROVING_ARCHITECTURE.md  TEAM_PROTOCOL.md  feat-v0.1-notes.md
examples/: README.md  sample_trajectory.json
mcp/: pyproject.toml
mcp/rote_mcp/: __init__.py  adaptive_store.py  descriptors.py  fusion_adapter.py  fusion_runtime.py  promotion.py  recall.py  server.py  service.py  storage.py  trace_memory.py  variables.py
services/: __init__.py  database_gateway.py
tests/: test_cross_surface.py  test_digitalocean_demo.py  test_fusion_store.py  test_hybrid_demo.py  test_mcp_service.py  test_notch_companion.py  test_real_web_skill_lab.py  (+3 more)
(+66 files in other folders)
