[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rote-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.0,<4",
  "google-genai>=2.7.0",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rote_mcp*"]
